[project]
name = "pump-it-up"
version = "0.1.0"
description = "Simple setup for the Pump it Up: Data Mining the Water Table challenge"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imblearn>=0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
]
